--- a/Android Client/Clup/app/src/main/res/values/dimen.xml
+++ b/Android Client/Clup/app/src/main/res/values/dimen.xml
@@ -14,6 +14,8 @@
     <dimen name="item_title_text_view_text_size">24sp</dimen>
     <dimen name="medium_item_subtitle_text_view_text_size">18sp</dimen>
     <dimen name="item_subtitle_text_view_text_size">14sp</dimen>
+    <dimen name="info_title_text_view">23sp</dimen>
+    <dimen name="info_subtitle_text_view">20sp</dimen>
 
     <dimen name="mini_fab_margin_start">20dp</dimen>
     <dimen name="fab_margin_end">10dp</dimen>
@@ -22,7 +24,9 @@
 
     <dimen name="card_view_margin">12dp</dimen>
     <dimen name="card_corner_radius">15dp</dimen>
+    <dimen name="card_large_corner_radius">20dp</dimen>
     <dimen name="card_elevation">2dp</dimen>
+    <dimen name="card_no_elevation">0dp</dimen>
 
     <dimen name="peek_height">135dp</dimen>
 
