--- a/Android Client/Clup/app/src/main/res/values-night/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,7 @@
     <color name="outlined_button_text_color_disabled">@color/gray_700</color>
     <color name="outlined_button_stroke_color">@color/lime_500</color>
     <color name="outlined_button_stroke_color_disabled">@color/gray_700</color>
+    <color name="notification_button_icon_color">@color/black</color>
 
     <!-- splash screen colors -->
     <color name="splash_screen_logo_color">@color/gray_900</color>
@@ -15,7 +16,7 @@
 
     <!-- qr-code colors -->
     <color name="qr_code_on_color">@color/white</color>
-    <color name="qr_code_off_color">@color/gray_900</color>
+    <color name="qr_code_off_color">@android:color/transparent</color>
 
     <!-- chip colors -->
     <color name="selected_background_color">@color/lime_200_alpha_65</color>
@@ -23,5 +24,8 @@
 
     <color name="selected_text_color">@color/lime_700</color>
     <color name="normal_text_color">@color/white_alpha_85</color>
+
+    <!-- notifications color accent -->
+    <color name="notification_accent_color">@color/lime_500</color>
 
 </resources>
