--- a/Android Client/Clup/app/src/main/res/values/array.xml
+++ b/Android Client/Clup/app/src/main/res/values/array.xml
@@ -5,4 +5,11 @@
         <item>@string/array_item_dark</item>
         <item>@string/array_item_system_default</item>
     </string-array>
+
+    <string-array name="time_notices_array">
+        <item>@string/array_item_fifteen_minutes_before</item>
+        <item>@string/array_item_thirty_minutes_before</item>
+        <item>@string/array_item_one_hour_before</item>
+        <item>@string/array_item_two_hours_before</item>
+    </string-array>
 </resources>
