--- a/Android Client/Clup/app/src/main/res/values/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="lime_200_alpha_65">#A6CAFFE7</color>
     <color name="lime_200">#FFCAFFE7</color>
+    <color name="lime_500_alpha_50">#8097FFCF</color>
     <color name="lime_500">#FF97FFCF</color>
     <color name="lime_700">#FF64FFB7</color>
     <color name="lime_900">#FF3A956B</color>
@@ -16,6 +17,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_alpha_10">#1FFFFFFF</color>
     <color name="white_alpha_20">#33FFFFFF</color>
+    <color name="white_alpha_30">#4DFFFFFF</color>
     <color name="white_alpha_80">#CCFFFFFF</color>
     <color name="white_alpha_85">#75FFFFFF</color>
     <color name="white_alpha_90">#10FFFFFF</color>
@@ -27,6 +29,7 @@
     <color name="outlined_button_text_color_disabled">@color/gray_400</color>
     <color name="outlined_button_stroke_color">@color/lime_700</color>
     <color name="outlined_button_stroke_color_disabled">@color/gray_400</color>
+    <color name="notification_button_icon_color">@color/lime_900</color>
 
     <!-- splash screen colors -->
     <color name="splash_screen_logo_color">@color/gray_900</color>
@@ -43,6 +46,9 @@
 
     <color name="selected_text_color">@color/lime_900</color>
     <color name="normal_text_color">@color/gray_legacy</color>
+
+    <!-- notifications color accent -->
+    <color name="notification_accent_color">@color/lime_500</color>
 
     <!-- TODO remove this -->
     <color name="unknown">@android:color/holo_blue_bright</color>
