--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -9,9 +9,6 @@
         <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/lime_200</item>
         <item name="colorOnSecondary">@color/black</item>
-
-        <item name="snackbarStyle">@style/AppTheme.Clup.Snackbar.Style</item>
-        <item name="snackbarTextViewStyle">@style/AppTheme.Clup.Snackbar.Text</item>
     </style>
 
     <!-- MAIN ACTIVITY THEME -->
@@ -54,6 +51,19 @@
         <item name="android:background">@color/lime_500</item>
     </style>
 
+    <!-- DETAILS ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Details" parent="AppTheme.Clup.Select">
+
+    </style>
+
+    <style name="AppTheme.Clup.Details.ConstraintLayout" parent="">
+        <item name="android:background">@color/lime_500</item>
+    </style>
+
+    <style name="AppTheme.Clup.CoordinatorLayout" parent="Widget.Support.CoordinatorLayout">
+        <item name="android:background">@color/white</item>
+    </style>
+
     <!-- SPLASH SCREEN THEME -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
@@ -71,6 +81,11 @@
     <style name="AppTheme.Clup.SelectMaterialToolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:background">@color/lime_500</item>
         <item name="titleTextColor">@color/black</item>
+    </style>
+
+    <!-- TOOLBAR THEMES -->
+    <style name="AppTheme.Clup.DetailsMaterialToolbar" parent="AppTheme.Clup.SelectMaterialToolbar">
+
     </style>
 
     <style name="AppTheme.Clup.MainMaterialToolbar" parent="Widget.MaterialComponents.Toolbar">
@@ -102,7 +117,7 @@
         <item name="fontFamily">@font/helvetica_neue_heavy</item>
     </style>
 
-    <!-- BUTTON FINAL THEME -->
+    <!-- BUTTON FINAL THEMES -->
     <style name="AppTheme.Clup.FilledRoundButton" parent="@style/AppTheme.Clup.MaterialRoundedButton">
         <item name="rippleColor">@color/white</item>
     </style>
@@ -112,10 +127,16 @@
         <item name="android:textColor">@color/outlined_material_round_button_text_color</item>
     </style>
 
+    <style name="AppTheme.Clup.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textColor">@color/lime_900</item>
+        <item name="iconTint">@color/lime_900</item>
+        <item name="rippleColor">@color/white</item>
+    </style>
+
     <!-- ALERT DIALOG THEME -->
     <style name="AppTheme.Clup.RoundedAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
-        <item name="colorPrimary">@color/lime_700</item>
-        <item name="colorAccent">@color/lime_700</item>
+        <item name="colorPrimary">@color/lime_900</item>
+        <item name="colorAccent">@color/lime_900</item>
         <item name="cornerSize">@dimen/alert_dialog_corner_radius</item>
         <item name="android:dialogCornerRadius" tools:targetApi="p">
             @dimen/alert_dialog_corner_radius
@@ -141,6 +162,13 @@
         <item name="android:textSize">@dimen/item_title_text_view_text_size</item>
     </style>
 
+    <style name="AppTheme.Clup.InfoTitleTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:lines">1</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/gray_legacy</item>
+        <item name="android:textSize">@dimen/info_title_text_view</item>
+    </style>
+
     <!-- SUBTITLE TEXT VIEW THEMES -->
     <style name="AppTheme.Clup.SubtitleTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/helvetica_neue_light</item>
@@ -162,13 +190,25 @@
         <item name="android:textColor">@color/gray_700</item>
     </style>
 
+    <style name="AppTheme.Clup.DetailsTextView" parent="AppTheme.Clup.SubtitleTextView">
+        <item name="android:textColor">@color/gray_700</item>
+        <item name="drawableTint">@color/gray_700</item>
+        <item name="android:drawablePadding">12dp</item>
+    </style>
+
+    <style name="AppTheme.Clup.InfoSubtitleTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/gray_legacy</item>
+        <item name="android:textSize">@dimen/info_subtitle_text_view</item>
+    </style>
+
     <!-- PAD TEXT VIEW THEME -->
     <style name="AppTheme.Clup.PadTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:background">@color/gray_legacy</item>
     </style>
 
     <!-- CARD VIEW ITEM THEMES -->
-    <style name="AppTheme.Clup.CardView" parent="Widget.MaterialComponents.CardView">
+    <style name="AppTheme.Clup.ItemCardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardElevation">@dimen/card_elevation</item>
 
@@ -178,14 +218,20 @@
         <item name="rippleColor">@color/black_alpha_10</item>
     </style>
 
-    <style name="AppTheme.Clup.TopRoundedCardView">
-        <item name="cardElevation">0dp</item>
-        <item name="cardCornerRadius">20dp</item>
+    <style name="AppTheme.Clup.TopRoundedCardView" parent="">
+        <item name="cardElevation">@dimen/card_no_elevation</item>
         <item name="android:backgroundTint">?android:colorBackground</item>
     </style>
 
+    <style name="AppTheme.Clup.ActionsCardView" parent="Widget.MaterialComponents.CardView">
+        <item name="android:backgroundTint">@color/lime_200</item>
+
+        <item name="cardCornerRadius">@dimen/card_corner_radius</item>
+        <item name="cardElevation">@dimen/card_no_elevation</item>
+    </style>
+
     <!-- RECYCLER VIEW CONTAINER THEME -->
-    <style name="AppTheme.Clup.BottomSheetRecyclerView">
+    <style name="AppTheme.Clup.BottomSheetRecyclerView" parent="">
         <item name="android:background">@color/white</item>
 
         <item name="behavior_hideable">false</item>
@@ -218,13 +264,5 @@
 
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
-    </style>
-
-    <!-- SNACKBAR THEME -->
-    <style name="AppTheme.Clup.Snackbar.Text" parent="@style/Widget.MaterialComponents.Snackbar.TextView">
-        <item name="android:textColor">?colorOnError</item>
-    </style>
-    <style name="AppTheme.Clup.Snackbar.Style" parent="@style/Widget.MaterialComponents.Snackbar">
-        <item name="backgroundTint">?colorError</item>
     </style>
 </resources>
