--- a/Android Client/Clup/app/src/main/res/layout/fragment_success.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_success.xml
@@ -10,11 +10,11 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/accessibility_success_image_view"
         android:src="@drawable/ic_circle_check"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="TODO" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
