--- a/Android Client/Clup/app/src/main/res/layout-land/activity_details.xml
+++ b/Android Client/Clup/app/src/main/res/layout-land/activity_details.xml
@@ -167,7 +167,7 @@
                             android:layout_marginStart="20dp"
                             android:layout_marginEnd="20dp"
                             android:adjustViewBounds="true"
-                            android:contentDescription="TODO"
+                            android:contentDescription="@string/accessibility_qr_code_image_view"
                             android:scaleType="fitCenter"
                             android:visibility="gone"
                             app:layout_constraintEnd_toEndOf="parent"
