--- a/Android Client/Clup/app/src/main/res/layout/activity_auth.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_auth.xml
@@ -4,4 +4,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.AuthActivity" />
+    tools:context=".ui.auth.AuthActivity"
+    tools:ignore="MergeRootFrame" />
