--- a/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
@@ -39,6 +39,10 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <!-- DETAILS ACTIVITY THEME -->
+    <style name="AppTheme.Clup.Details" parent="AppTheme.Clup.Select">
+        <item name="android:navigationBarColor">@color/white_alpha_07</item>
+    </style>
 
     <!-- SPLASH SCREEN THEME -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
