--- a/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
@@ -41,6 +41,11 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <!-- DETAILS ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Details" parent="AppTheme.Clup.Select">
+        <item name="android:navigationBarColor">@color/white_alpha_07</item>
+    </style>
+
     <!-- SPLASH SCREEN THEME -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
