--- a/Android Client/Clup/app/src/main/res/values-night/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/themes.xml
@@ -54,15 +54,15 @@
 
     <!-- DETAILS ACTIVITY THEMES -->
     <style name="AppTheme.Clup.Details" parent="AppTheme.Clup.Select">
-
+        <item name="android:navigationBarColor">@color/white_alpha_07</item>
     </style>
 
     <style name="AppTheme.Clup.Details.ConstraintLayout" parent="">
-        <item name="background">?android:colorBackground</item>
+        <item name="android:background">?android:colorBackground</item>
     </style>
 
     <style name="AppTheme.Clup.CoordinatorLayout" parent="Widget.Support.CoordinatorLayout">
-        <item name="android:background">?android:colorBackground</item>
+        <item name="android:background">@color/white_alpha_07</item>
     </style>
 
     <!-- SPLASH SCREEN THEME -->
@@ -188,7 +188,7 @@
     <style name="AppTheme.Clup.TopRoundedCardView" parent="">
         <item name="cardElevation">0dp</item>
         <item name="cardCornerRadius">20dp</item>
-        <item name="android:backgroundTint">@color/white_alpha_90</item>
+        <item name="android:backgroundTint">@color/gray_810</item>
     </style>
 
     <style name="AppTheme.Clup.ActionsCardView" parent="Widget.MaterialComponents.CardView">
