--- a/Android Client/Clup/app/src/main/res/values/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values/colors.xml
@@ -5,22 +5,23 @@
     <color name="lime_500_alpha_50">#8097FFCF</color>
     <color name="lime_500">#FF97FFCF</color>
     <color name="lime_700">#FF64FFB7</color>
-    <color name="lime_900">#FF3A956B</color>
+    <color name="lime_600">#FF41a878</color>
+    <color name="lime_900">#FF15BD82</color>
     <color name="gray_legacy">#FFBCBFC0</color>
     <color name="gray_400">#FFBBBBBB</color>
     <color name="gray_700">#FF545454</color>
     <color name="gray_800">#FF2A2A2A</color>
+    <color name="gray_810">#FF232323</color>
     <color name="gray_900">#FF111111</color>
     <color name="black">#FF000000</color>
-    <color name="black_alpha_05">#08000000</color>
-    <color name="black_alpha_10">#16000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="white_alpha_10">#1FFFFFFF</color>
-    <color name="white_alpha_20">#33FFFFFF</color>
+    <color name="black_alpha_03">#08000000</color>
+    <color name="black_alpha_09">#17000000</color>
+    <color name="white_alpha_07">#12FFFFFF</color>
+    <color name="white_alpha_12">#1FFFFFFF</color>
     <color name="white_alpha_30">#4DFFFFFF</color>
+    <color name="white_alpha_46">#75FFFFFF</color>
     <color name="white_alpha_80">#CCFFFFFF</color>
-    <color name="white_alpha_85">#75FFFFFF</color>
-    <color name="white_alpha_90">#10FFFFFF</color>
+    <color name="white">#FFFFFFFF</color>
 
     <color name="ic_check_color">@color/lime_700</color>
 
@@ -29,7 +30,7 @@
     <color name="outlined_button_text_color_disabled">@color/gray_400</color>
     <color name="outlined_button_stroke_color">@color/lime_700</color>
     <color name="outlined_button_stroke_color_disabled">@color/gray_400</color>
-    <color name="notification_button_icon_color">@color/lime_900</color>
+    <color name="notification_button_icon_color">@color/lime_600</color>
 
     <!-- splash screen colors -->
     <color name="splash_screen_logo_color">@color/gray_900</color>
@@ -42,14 +43,11 @@
 
     <!-- chip colors -->
     <color name="selected_background_color">@color/lime_200</color>
-    <color name="normal_background_color">@color/black_alpha_05</color>
+    <color name="normal_background_color">@color/black_alpha_03</color>
 
     <color name="selected_text_color">@color/lime_900</color>
     <color name="normal_text_color">@color/gray_legacy</color>
 
     <!-- notifications color accent -->
     <color name="notification_accent_color">@color/lime_500</color>
-
-    <!-- TODO remove this -->
-    <color name="unknown">@android:color/holo_blue_bright</color>
 </resources>
