--- a/Android Client/Clup/app/src/main/res/layout-land/activity_details.xml
+++ b/Android Client/Clup/app/src/main/res/layout-land/activity_details.xml
@@ -64,7 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    app:drawableStartCompat="@drawable/ic_time"
+                    app:drawableStartCompat="@drawable/ic_clock"
                     app:layout_constraintStart_toStartOf="@id/date_text_view"
                     app:layout_constraintTop_toBottomOf="@id/date_text_view" />
 
@@ -90,21 +90,23 @@
                         <Button
                             android:id="@+id/notify_button"
                             style="@style/AppTheme.Clup.TextButton"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="8dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="36dp"
-                            android:text="@string/action_notify_me" />
+                            android:text="@string/action_notify_me"
+                            android:textAlignment="textStart" />
 
                         <Button
                             android:id="@+id/directions_button"
                             style="@style/AppTheme.Clup.TextButton"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="8dp"
                             android:layout_marginBottom="8dp"
                             android:text="@string/action_directions"
+                            android:textAlignment="textStart"
                             app:icon="@drawable/ic_directions" />
 
                     </LinearLayout>
