--- a/Android Client/Clup/app/src/main/res/layout/activity_details.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_details.xml
@@ -70,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    app:drawableStartCompat="@drawable/ic_time"
+                    app:drawableStartCompat="@drawable/ic_clock"
                     app:layout_constraintStart_toStartOf="@id/date_text_view"
                     app:layout_constraintTop_toBottomOf="@id/date_text_view" />
 
