--- a/Android Client/Clup/app/src/main/res/values-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-v23/themes.xml
@@ -61,6 +61,6 @@
 
     <!-- PAD TEXT VIEW THEME -->
     <style name="AppTheme.Clup.PadTextView" parent="Widget.MaterialComponents.TextView">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/gray_50</item>
     </style>
 </resources>
