--- a/Android Client/Clup/app/src/main/res/values-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-v27/themes.xml
@@ -23,7 +23,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
 
         <item name="android:windowLightNavigationBar">true</item>
-        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">@color/gray_50</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
@@ -65,6 +65,6 @@
 
     <!-- PAD TEXT VIEW THEME -->
     <style name="AppTheme.Clup.PadTextView" parent="Widget.MaterialComponents.TextView">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/gray_50</item>
     </style>
 </resources>
