Added first version of MainActivity, json rework to optimize data saved, fixed notification bugs and reworked notification procedure, added first model unit-tests.

--- a/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            app:boxBackgroundColor="@android:color/transparent"
+            app:boxBackgroundColor="@color/transparent"
             app:errorEnabled="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
