--- a/Android Client/Clup/app/src/main/res/layout/fragment_phone.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_phone.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            app:boxBackgroundColor="@android:color/transparent"
+            app:boxBackgroundColor="@color/transparent"
             app:errorEnabled="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@+id/phone_text_input"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="50dp"
-            app:boxBackgroundColor="@android:color/transparent"
+            app:boxBackgroundColor="@color/transparent"
             app:errorEnabled="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
