--- a/Android Client/Clup/app/src/main/res/layout/item_day.xml
+++ b/Android Client/Clup/app/src/main/res/layout/item_day.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <com.google.android.material.chip.ChipGroup
-        android:id="@+id/hours_chip_group"
+        android:id="@+id/time_chip_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
