--- a/Android Client/Clup/app/src/main/res/layout-land/activity_details.xml
+++ b/Android Client/Clup/app/src/main/res/layout-land/activity_details.xml
@@ -59,7 +59,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/hour_text_view"
+                    android:id="@+id/time_text_view"
                     style="@style/AppTheme.Clup.DetailsTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/hour_text_view">
+                    app:layout_constraintTop_toBottomOf="@id/time_text_view">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
