--- a/Android Client/Clup/app/src/main/res/layout/activity_details.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_details.xml
@@ -65,7 +65,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/hour_text_view"
+                    android:id="@+id/time_text_view"
                     style="@style/AppTheme.Clup.DetailsTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
                     android:layout_marginVertical="26dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/hour_text_view">
+                    app:layout_constraintTop_toBottomOf="@id/time_text_view">
 
                     <!-- icons of notify_button is added programmatically in DetailsViewModel -->
                     <Button
