--- a/Android Client/Clup/app/src/main/res/layout/activity_select.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_select.xml
@@ -44,7 +44,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:background="@android:color/transparent"
+            android:background="@color/transparent"
             android:orientation="vertical"
             android:overScrollMode="never" />
     </androidx.cardview.widget.CardView>
