--- a/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
@@ -19,7 +19,7 @@
         <item name="android:windowTranslucentStatus">false</item>
 
         <item name="android:windowLightStatusBar">false</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/transparent</item>
 
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
