--- a/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
@@ -18,7 +18,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
 
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/transparent</item>
         <item name="android:windowLightStatusBar">false</item>
 
         <item name="android:windowLightNavigationBar">false</item>
