--- a/Android Client/Clup/app/src/main/res/values-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-v23/themes.xml
@@ -6,7 +6,7 @@
         <item name="android:windowTranslucentStatus">false</item>
 
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">?android:colorBackground</item>
+        <item name="android:statusBarColor">@color/lime_500</item>
 
         <item name="android:navigationBarColor">@color/gray_legacy</item>
 
@@ -19,7 +19,7 @@
         <item name="android:windowTranslucentStatus">false</item>
 
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/transparent</item>
 
         <item name="android:navigationBarColor">@color/gray_legacy</item>
 
