--- a/Android Client/Clup/app/src/main/res/values/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="white_alpha_46">#75FFFFFF</color>
     <color name="white_alpha_80">#CCFFFFFF</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="transparent">@android:color/transparent</color>
+    <color name="transparent">#00000000</color>
 
     <!-- icon colors -->
     <color name="ic_check_color">@color/lime_700</color>
