--- a/Android Client/Clup/app/src/main/res/layout/activity_main.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,11 @@
 
     <TextView
         android:id="@+id/friendly_name_text_view"
-        style="@style/AppTheme.Clup.TitleTextView"
+        style="@style/AppTheme.Clup.WelcomeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="12dp"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toTopOf="@id/main_card_view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +51,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/friendly_name_text_view">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/empty_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/empty_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_empty_view"
+                app:drawableTopCompat="@drawable/empty_view_background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:drawablePadding="22dp"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:fontFamily="@font/helvetica_neue_light"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_recycler_view"
             android:layout_width="match_parent"
@@ -59,7 +84,8 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:orientation="vertical"
-            android:overScrollMode="never" />
+            android:overScrollMode="never"
+            android:visibility="gone" />
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
