--- a/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
@@ -8,7 +8,7 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
 
-        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">@color/white_alpha_07</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
