--- a/Android Client/Clup/app/src/main/res/values-night/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/themes.xml
@@ -19,7 +19,7 @@
 
         <item name="android:statusBarColor">?android:colorBackground</item>
 
-        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">@color/white_alpha_07</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
@@ -128,11 +128,20 @@
         <item name="android:textSize">@dimen/title_text_view_text_size</item>
     </style>
 
-    <style name="AppTheme.Clup.ItemTitleTextView" parent="">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textAlignment">textStart</item>
+    <style name="AppTheme.Clup.WelcomeTextView" parent="AppTheme.Clup.TitleTextView">
+        <item name="android:textColor">@color/lime_200</item>
+    </style>
 
+    <style name="AppTheme.Clup.ItemTitleTextView" parent="">
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/item_title_text_view_text_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTheme.Clup.ItemTitleTextView.Alt" parent="AppTheme.Clup.ItemTitleTextView">
+        <item name="android:textSize">@dimen/item_title_text_view_alt_text_size</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="AppTheme.Clup.InfoTitleTextView" parent="Widget.MaterialComponents.TextView">
@@ -154,6 +163,10 @@
     <style name="AppTheme.Clup.ItemSubtitleTextView" parent="AppTheme.Clup.SubtitleTextView">
         <item name="android:textSize">@dimen/item_subtitle_text_view_text_size</item>
         <item name="android:textAlignment">textStart</item>
+    </style>
+
+    <style name="AppTheme.Clup.ItemSubtitleTextView.Alt" parent="AppTheme.Clup.ItemSubtitleTextView">
+
     </style>
 
     <style name="AppTheme.Clup.MediumItemSubtitleTextView" parent="">
@@ -196,6 +209,10 @@
 
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardElevation">@dimen/card_no_elevation</item>
+    </style>
+
+    <style name="AppTheme.Clup.ReservationCardView" parent="AppTheme.Clup.ActionsCardView">
+        <item name="android:backgroundTint">@color/transparent</item>
     </style>
 
     <!-- RECYCLER VIEW CONTAINER THEME -->
