--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -135,6 +135,11 @@
         <item name="rippleColor">@color/white</item>
     </style>
 
+    <style name="AppTheme.Clup.InfoWindowRoundButton" parent="@style/AppTheme.Clup.MaterialRoundedButton">
+        <item name="android:backgroundTint">@color/lime_500</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <!-- ALERT DIALOG THEME -->
     <style name="AppTheme.Clup.RoundedAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="colorPrimary">@color/lime_900</item>
@@ -247,6 +252,11 @@
 
     <style name="AppTheme.Clup.ReservationCardView" parent="AppTheme.Clup.ActionsCardView">
         <item name="android:backgroundTint">@color/transparent</item>
+    </style>
+
+    <style name="AppTheme.Clup.InfoWindowCardView" parent="Widget.MaterialComponents.CardView">
+        <item name="cardElevation">@dimen/card_no_elevation</item>
+        <item name="cardCornerRadius">@dimen/card_corner_radius</item>
     </style>
 
     <!-- RECYCLER VIEW CONTAINER THEME -->
