--- a/Android Client/Clup/app/src/main/res/layout/item_reservation.xml
+++ b/Android Client/Clup/app/src/main/res/layout/item_reservation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_card_view"
+    android:id="@+id/item_reservation_card_view"
     style="@style/AppTheme.Clup.ReservationCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
