Added InvalidateActivity (for demonstration purposes only), added related tests, migrated to JUnit 4 also for unit tests, removed unused libraries in build.gradle.

--- a/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
@@ -44,6 +44,11 @@
         <item name="android:navigationBarColor">@color/white_alpha_07</item>
     </style>
 
+    <!-- REGISTER ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Register" parent="AppTheme.Clup.Select">
+        <item name="android:statusBarColor">?android:colorBackground</item>
+    </style>
+
     <!-- SPLASH SCREEN THEME -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
