--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -68,6 +68,11 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    <!-- REGISTER ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Register" parent="AppTheme.Clup.Select">
+        <item name="android:statusBarColor">?android:colorBackground</item>
+    </style>
+
     <!-- SPLASH SCREEN THEME -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
