--- a/Android Client/Clup/app/src/main/res/values/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values/colors.xml
@@ -53,4 +53,8 @@
 
     <!-- notifications color accent -->
     <color name="notification_accent_color">@color/lime_500</color>
+
+    <!-- text colors -->
+    <color name="error_color">#FFD20112</color>
+    <color name="error_color_alt">#FFFFCDD2</color>
 </resources>
