--- a/Android Client/Clup/app/src/main/res/layout/activity_details.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_details.xml
@@ -54,6 +54,45 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/expired_warning_card_view"
+                    style="@style/AppTheme.Clup.ErrorCardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginVertical="26dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="12dp">
+
+                        <TextView
+                            android:id="@+id/expired_waring_title_text_view"
+                            style="@style/AppTheme.Clup.InfoTitleTextView.Error"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/title_warning_expire"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            style="@style/AppTheme.Clup.InfoSubtitleTextView.Error"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|bottom"
+                            android:text="@string/text_warning_expire"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/expired_waring_title_text_view" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
                 <TextView
                     android:id="@+id/date_text_view"
                     style="@style/AppTheme.Clup.DetailsTextView"
@@ -62,7 +101,7 @@
                     android:layout_marginTop="18dp"
                     app:drawableStartCompat="@drawable/ic_calendar"
                     app:layout_constraintStart_toStartOf="@id/details_actions_card_view"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/expired_warning_card_view" />
 
                 <TextView
                     android:id="@+id/time_text_view"
