--- a/Android Client/Clup/app/src/main/res/layout/item_reservation.xml
+++ b/Android Client/Clup/app/src/main/res/layout/item_reservation.xml
@@ -26,20 +26,20 @@
         <TextView
             android:id="@+id/shop_name_text_view"
             style="@style/AppTheme.Clup.ItemTitleTextView"
-            android:layout_marginStart="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="@id/store_icon"
             app:layout_constraintStart_toEndOf="@id/store_icon"
-            app:layout_constraintTop_toTopOf="@id/store_icon"
-            app:layout_constraintBottom_toBottomOf="@id/store_icon"/>
+            app:layout_constraintTop_toTopOf="@id/store_icon" />
 
         <TextView
             android:id="@+id/date_time_text_view"
             style="@style/AppTheme.Clup.ItemSubtitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="12dp"
             android:layout_marginTop="6dp"
+            android:drawablePadding="12dp"
             android:gravity="center_vertical"
             app:layout_constraintStart_toStartOf="@id/shop_name_text_view"
             app:layout_constraintTop_toBottomOf="@id/shop_name_text_view" />
@@ -56,5 +56,16 @@
             app:layout_constraintStart_toStartOf="@id/shop_name_text_view"
             app:layout_constraintTop_toBottomOf="@id/date_time_text_view" />
 
+        <TextView
+            android:id="@+id/expired_warning_text_view"
+            style="@style/AppTheme.Clup.ItemSubtitleTextView.Error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:drawablePadding="12dp"
+            android:text="@string/text_expired"
+            app:drawableStartCompat="@drawable/ic_error_small"
+            app:layout_constraintStart_toStartOf="@id/shop_name_text_view"
+            app:layout_constraintTop_toBottomOf="@id/notification_text_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
