--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -190,6 +190,12 @@
         <item name="android:textSize">@dimen/info_title_text_view</item>
     </style>
 
+    <style name="AppTheme.Clup.InfoTitleTextView.Error" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/item_title_text_view_text_size</item>
+    </style>
+
     <!-- SUBTITLE TEXT VIEW THEMES -->
     <style name="AppTheme.Clup.SubtitleTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/helvetica_neue_light</item>
@@ -206,6 +212,13 @@
 
     <style name="AppTheme.Clup.ItemSubtitleTextView.Alt" parent="AppTheme.Clup.ItemSubtitleTextView">
 
+    </style>
+
+    <style name="AppTheme.Clup.ItemSubtitleTextView.Error" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">@dimen/item_subtitle_text_view_text_size</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/error_color</item>
     </style>
 
     <style name="AppTheme.Clup.MediumItemSubtitleTextView" parent="">
@@ -225,6 +238,12 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">@color/gray_legacy</item>
         <item name="android:textSize">@dimen/info_subtitle_text_view</item>
+    </style>
+
+    <style name="AppTheme.Clup.InfoSubtitleTextView.Error" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/error_color_alt</item>
+        <item name="android:textSize">@dimen/item_subtitle_text_view_text_size</item>
     </style>
 
     <!-- PAD TEXT VIEW THEME -->
@@ -253,6 +272,10 @@
 
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardElevation">@dimen/card_no_elevation</item>
+    </style>
+
+    <style name="AppTheme.Clup.ErrorCardView" parent="AppTheme.Clup.ActionsCardView">
+        <item name="android:backgroundTint">@color/error_color</item>
     </style>
 
     <style name="AppTheme.Clup.ReservationCardView" parent="AppTheme.Clup.ActionsCardView">
