--- a/Android Client/Clup/app/src/main/res/layout/activity_select.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_select.xml
@@ -24,30 +24,22 @@
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_arrow_back" />
 
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/select_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="scrollable" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/select_card_view"
-        style="@style/AppTheme.Clup.TopRoundedCardView"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/select_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="30dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/select_app_bar_layout">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/select_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:background="@color/transparent"
-            android:orientation="vertical"
-            android:overScrollMode="never" />
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toBottomOf="@id/select_app_bar_layout" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/done_button"
